# Smile_Simulation

./: .gitignore  HuskyGazebo.sh  README.md  init.sh  launchGazebo.sh  remoteGazebo.sh
controls/: .moveHuskey.sh.swp  PID.py  moveHuskey.sh  simhuskycontrol.py  waypoints.py
husky_control/launch/: control.launch
husky_description/: package.xml
husky_description/launch/: description.launch
husky_description/urdf/: decorations.urdf.xacro  husky.urdf.xacro  wheel.urdf.xacro
husky_description/urdf/accessories/: kinect_camera.urdf.xacro  sensor_arch.urdf.xacro  sick_lms1xx_mount.urdf.xacro
lanedetect/: cam.py  cam2.py  detect.py  lanedetector.py  simulation.py
launch/: city.launch  smile.launch  spawn_husky.launch
media/materials/scripts/: smile.material
models/: README.md
models/road_curve/: model.config  model.sdf
models/road_curve_180/: model.config  model.sdf
models/road_curve_270/: model.config  model.sdf
models/road_curve_90/: model.config  model.sdf
models/road_double_yellow_horizontal/: model.config  model.sdf
models/road_double_yellow_vertical/: model.config  model.sdf
models/road_intersection/: model.config  model.sdf
models/road_solid_white_horizontal/: model.config  model.sdf
models/road_solid_white_vertical/: model.config  model.sdf
models/track/: model.config  model.sdf
worlds/: smile.world
